SUBDIRS = include src man doc

EXTRA_DIST = Changelog COPYING COPYING.libvdeplug COPYING.slirpvde INSTALL README

extraclean: distclean
	rm -rf aclocal.m4 autom4te.cache autoscan.log configure.scan include/config.h.in* configure depcomp install-sh Makefile.in config.guess config.sub ltmain.sh missing `find . -name Makefile.in` vde2-*.tar.gz vde2-*.tar.bz2 compile
